--- a/knp/core-library/CMakeLists.txt
+++ b/knp/core-library/CMakeLists.txt
@@ -77,7 +77,7 @@ knp_add_library("${PROJECT_NAME}"
     impl/subscription.cpp
 
     ${${PROJECT_NAME}_headers}
-    PRECOMP impl/common_precomp.h
+    # PRECOMP impl/common_precomp.h
     LINK_PRIVATE
         Boost::headers spdlog::spdlog cppzmq flatbuffers "${PROJECT_NAME}_messaging"
     LINK_PUBLIC
