--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -96,12 +96,10 @@ else()
     set(KNP_ENABLE_AVX_DEFAULT OFF)
 endif()
 
-if (KNP_MAINTAINER_BUILD)
-    if(KNP_BUILD_AUTONOMOUS)
-        find_package(Doxygen OPTIONAL_COMPONENTS dot)
-        if(NOT DOXYGEN_FOUND)
-            message(WARNING "Doxygen was not found! Documentation build will be disabled by default.")
-        endif()
+if (KNP_BUILD_AUTONOMOUS OR KNP_MAINTAINER_BUILD)
+    find_package(Doxygen OPTIONAL_COMPONENTS dot)
+    if(NOT DOXYGEN_FOUND)
+        message(WARNING "Doxygen was not found! Documentation build will be disabled by default.")
     endif()
 endif()
 
@@ -114,7 +112,7 @@ else()
     set(KNP_PYTHON_FRAMEWORK_BUILD_DEFAULT ON)
 endif()
 
-cmake_dependent_option(KNP_BUILD_DOCUMENTATION "Build doxygen auto documentation" "KNP_BUILD_AUTONOMOUS" "DOXYGEN_FOUND" OFF)
+cmake_dependent_option(KNP_BUILD_DOCUMENTATION "Build doxygen auto documentation" ${KNP_BUILD_AUTONOMOUS} "DOXYGEN_FOUND" OFF)
 option(KNP_BUILD_EXAMPLES "Build usage examples" ${KNP_BUILD_AUTONOMOUS})
 option(KNP_BUILD_TESTS "Build tests" ${KNP_BUILD_AUTONOMOUS})
 option(KNP_ENABLE_AVX "Enable AVX and other CPU-specific extensions in the release build" ${KNP_ENABLE_AVX_DEFAULT})
@@ -122,7 +120,7 @@ option(KNP_ENABLE_COVERAGE "Enable coverage checking" OFF)
 option(KNP_IPO_ENABLED "Enable interprocedural optimization" ON)
 option(KNP_MAINTAINER_BUILD "Build for maintainer, but not for the development purposes" OFF)
 cmake_dependent_option(KNP_PYTHON_FRAMEWORK_BUILD "Build KNP Python framework" ON "KNP_PYTHON_FRAMEWORK_BUILD_DEFAULT" OFF)
-cmake_dependent_option(KNP_PYTHON_BUILD_WHEEL "Build WHL package for the Python framework" "KNP_MAINTAINER_BUILD" "KNP_PYTHON_FRAMEWORK_BUILD" OFF)
+cmake_dependent_option(KNP_PYTHON_BUILD_WHEEL "Build WHL package for the Python framework" ${KNP_MAINTAINER_BUILD} "KNP_PYTHON_FRAMEWORK_BUILD" OFF)
 
 mark_as_advanced(KNP_MAINTAINER_BUILD)
 mark_as_advanced(KNP_ENABLE_COVERAGE)
