--- a/knp/base-framework/CMakeLists.txt
+++ b/knp/base-framework/CMakeLists.txt
@@ -37,6 +37,7 @@ knp_add_library("${PROJECT_NAME}-core"
     impl/network.cpp
     impl/model.cpp
     impl/model_executor.cpp
+    impl/model_loader.cpp
     impl/input_converter.cpp
     impl/output_channel.cpp
     impl/synchronization.cpp
