Windows Boost finding fix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,7 +61,9 @@ if (Boost_ROOT)  # WIN32?
             set(BOOST_LIBRARYDIR "${Boost_ROOT}/stage")
         else()
             file(GLOB _BOOST_LIB_DIRS LIST_DIRECTORIES true "${Boost_ROOT}/lib*-*-*")
-            list(GET _BOOST_LIB_DIRS 0 BOOST_LIBRARYDIR)
+            if (_BOOST_LIB_DIRS)
+                list(GET _BOOST_LIB_DIRS 0 BOOST_LIBRARYDIR)
+            endif()
             # set(Boost_LIB_PREFIX "")
         endif()
     endif()
