Windows link fix

--- a/examples/arni-save-load/CMakeLists.txt
+++ b/examples/arni-save-load/CMakeLists.txt
@@ -4,5 +4,9 @@ project(arni-save-load)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
-add_executable(arni-save-load main.cpp)
+if (NOT TARGET KNP::BaseFramework::Core)
+    find_package(knp-base-framework REQUIRED)
+endif()
+
+add_executable("${PROJECT_NAME}" main.cpp)
 target_link_libraries("${PROJECT_NAME}" PRIVATE KNP::BaseFramework::Core)
