--- a/examples/save-load-networks/CMakeLists.txt
+++ b/examples/save-load-networks/CMakeLists.txt
@@ -4,6 +4,9 @@ project(save-load-networks)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+if (NOT TARGET KNP::BaseFramework::Core)
+    find_package(knp-base-framework REQUIRED)
+endif()
+
 add_executable("${PROJECT_NAME}" main.cpp)
-set(EXTLIB_FROM_SUBMODULES ON)
 target_link_libraries("${PROJECT_NAME}" PRIVATE KNP::BaseFramework::Core)
