Add partial MNIST network visualization (no-verify)

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -8,6 +8,7 @@ set(CMAKE_CXX_STANDARD 17)
 add_subdirectory(arni-save-load)
 add_subdirectory(save-load-networks)
 add_subdirectory(simple-network)
+add_subdirectory(mnist-client)
 
 install(DIRECTORY "."
         COMPONENT "examples"
