--- a/knp/CMakeLists.txt
+++ b/knp/CMakeLists.txt
@@ -32,21 +32,27 @@ file(GLOB PVS_DIRS LIST_DIRECTORIES true "*")
 file(GLOB dirs LIST_DIRECTORIES true "backends/cpu/*")
 set(PVS_DIRS "${PVS_DIRS};${dirs}")
 
-set(PVS_TARGETS "")
-set(PVS_SKIP_LIST ".*autodoc|GENERATE_.*|.*-copy-.*|.*memcheck|.*_static")
+find_program(PVS_ANALYZER pvs-studio-analyzer NO_CACHE)
 
-foreach(_dir ${PVS_DIRS})
-    if (IS_DIRECTORY "${_dir}")
-        get_filename_component(DIR_NAME "${_dir}" NAME)
-        get_directory_property(DIR_TARGETS DIRECTORY "${_dir}" BUILDSYSTEM_TARGETS)
-        foreach(PVS_TARGET ${DIR_TARGETS})
-            string(REGEX MATCH "${PVS_SKIP_LIST}" PVS_SKIP ${PVS_TARGET})
-            if (PVS_SKIP)
-                continue()
-			endif()
-            list(APPEND PVS_TARGETS "${PVS_TARGET}")
-        endforeach()
-    endif()
-endforeach()
+if (PVS_ANALYZER)
+    set(PVS_TARGETS "")
+    set(PVS_SKIP_LIST ".*autodoc|GENERATE_.*|.*-copy-.*|.*memcheck|.*_static")
 
-pvs_studio_add_target(TARGET "pvs-analyze" ANALYZE ${PVS_TARGETS})
+    foreach(_dir ${PVS_DIRS})
+        if (IS_DIRECTORY "${_dir}")
+            get_filename_component(DIR_NAME "${_dir}" NAME)
+            get_directory_property(DIR_TARGETS DIRECTORY "${_dir}" BUILDSYSTEM_TARGETS)
+            foreach(PVS_TARGET ${DIR_TARGETS})
+                string(REGEX MATCH "${PVS_SKIP_LIST}" PVS_SKIP ${PVS_TARGET})
+                if (PVS_SKIP)
+                    continue()
+                endif()
+                list(APPEND PVS_TARGETS "${PVS_TARGET}")
+            endforeach()
+        endif()
+    endforeach()
+
+    pvs_studio_add_target(TARGET "pvs-analyze" ANALYZE ${PVS_TARGETS})
+else()
+    message(WARNING "PVS analyzer was not found, static analysis with PVS Studio disabled.")
+endif()
