--- a/knp/synapse-traits-library/CMakeLists.txt
+++ b/knp/synapse-traits-library/CMakeLists.txt
@@ -5,6 +5,8 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+# Suppress Boost warning.
+cmake_policy(SET CMP0167 OLD)
 
 project(knp-synapse-traits VERSION "${KNP_VERSION}" LANGUAGES C CXX
         DESCRIPTION "Kaspersky Neuromorphic Platform synapse traits library"
@@ -12,7 +14,7 @@ project(knp-synapse-traits VERSION "${KNP_VERSION}" LANGUAGES C CXX
 
 include(knp-functions)
 
-find_package(Boost ${KNP_BOOST_MIN_VERSION} REQUIRED CONFIG)
+find_package(Boost ${KNP_BOOST_MIN_VERSION} REQUIRED)
 
 set(${PROJECT_NAME}_PUBLIC_INCLUDE_DIR "knp/synapse-traits")
 
