--- a/knp/backends/cpu/thread_pool/CMakeLists.txt
+++ b/knp/backends/cpu/thread_pool/CMakeLists.txt
@@ -5,10 +5,12 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+# Suppress Boost warning.
+cmake_policy(SET CMP0167 OLD)
 
 project(knp-thread-pool-library VERSION "${KNP_VERSION}" LANGUAGES C CXX)
 
-find_package(Boost ${KNP_BOOST_MIN_VERSION} REQUIRED CONFIG)
+find_package(Boost ${KNP_BOOST_MIN_VERSION} REQUIRED)
 
 include(clang-tidy)
 include(knp-functions)
