--- a/knp/core-library/CMakeLists.txt
+++ b/knp/core-library/CMakeLists.txt
@@ -6,8 +6,11 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 
 # Required it for the linters.
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-# Suppress Boost warning.
-cmake_policy(SET CMP0167 OLD)
+
+if(CMAKE_VERSION VERSION_GREATER_EQUAL "3.30")
+    # Suppress Boost warning.
+    cmake_policy(SET CMP0167 OLD)
+endif()
 
 project(knp-core VERSION "${KNP_VERSION}" LANGUAGES C CXX
         DESCRIPTION "Kaspersky Neuromorphic Platform core library"
