--- a/knp/meta-library/CMakeLists.txt
+++ b/knp/meta-library/CMakeLists.txt
@@ -7,8 +7,10 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 # Required for the linters.
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-# Suppress Boost warning.
-cmake_policy(SET CMP0167 OLD)
+if(CMAKE_VERSION VERSION_GREATER_EQUAL "3.30")
+    # Suppress Boost warning.
+    cmake_policy(SET CMP0167 OLD)
+endif()
 
 project(knp-meta VERSION "${KNP_VERSION}" LANGUAGES C CXX
         DESCRIPTION "Kaspersky Neuromorphic Platform meta functions and templates library"
