--- a/knp/neuron-traits-library/CMakeLists.txt
+++ b/knp/neuron-traits-library/CMakeLists.txt
@@ -6,8 +6,10 @@ set(CMAKE_CXX_EXTENSIONS OFF)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
-# Suppress Boost warning.
-cmake_policy(SET CMP0167 OLD)
+if(CMAKE_VERSION VERSION_GREATER_EQUAL "3.30")
+    # Suppress Boost warning.
+    cmake_policy(SET CMP0167 OLD)
+endif()
 
 project(knp-neuron-traits VERSION "${KNP_VERSION}" LANGUAGES C CXX
         DESCRIPTION "Kaspersky Neuromorphic Platform neuron traits library"
